# nivelamento_test

./: .gitignore  README.md  pyproject.toml
testes/: __main__.py
testes/api/: Operadora API.postman_collection.json  data_loader.py  main.py  models.py  routes.py  services.py
testes/bancos_dados/: README.md
testes/bancos_dados/sql/: analytical_query.sql  create_tables.sql  import_data.sql
testes/transformacao_dados/: extractor.py  main.py
testes/web_scraping/: config.py  main.py  web_scraper.py
testes/web_scraping/file_management/: downloader.py  interfaces.py  pdf_download.py  pdf_link_extractor.py  progress_download.py  saver.py  zip_compressor.py
